@@ -1,3 +1,8 @@
+2007-01-17  Konstantin Triger <kostat@mainsoft.com>
+
+	* BaseValidator.cs: ToString the validating property value or
+		if null return an empty string.
+
 2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* TreeView.cs: fixed RegisterStyle, style names should be without
